# batchpr

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
batchpr/: __init__.py  updater.py
batchpr/tests/: test_updater.py
